syntax = "proto3";
package remote_render;

service Greeter {
    rpc SayHello(HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
   string message = 1;
}

message HelloReply {
    bytes message = 1;
}